<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/backgroundColor">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cl_moviesList"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginTop="44dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <SearchView
            android:id="@+id/sv_moviesList"
            android:layout_width="224dp"
            android:layout_height="20dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="11dp"
            android:layout_marginBottom="9dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/movie_avengers"
        android:layout_width="170dp"
        android:layout_height="296dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="18dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/cl_moviesList">

        <ImageView
            android:id="@+id/iv_movie_avengers"
            android:layout_width="match_parent"
            android:layout_height="246dp"
            android:src="@drawable/movie_avengers"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/iv_pgTitle_MoviesList"
            android:layout_width="24dp"
            android:layout_height="24dp"
            android:layout_marginStart="6dp"
            android:layout_marginTop="8dp"
            android:layout_marginEnd="136dp"
            android:layout_marginBottom="216dp"
            android:background="@drawable/pg1"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:layout_width="16dp"
            android:layout_height="18dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginTop="13dp"
            android:layout_marginEnd="8dp"
            android:src="@drawable/like"
            />

        
        <TextView
            android:id="@+id/tv_tagline_movie_avengers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/tagline"
            android:textAppearance="@style/tagline_movies"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toTopOf="@+id/cl_reviews_movie_avengers"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="2dp"
         />

        <LinearLayout
            android:layout_width="154dp"
            android:layout_height="32dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:orientation="vertical"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:layout_marginBottom="8dp"
            >

            <TextView
                android:id="@+id/tv_title_movies_avengers"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/movieTitle_movies_avengers"
                android:textAppearance="@style/movieTitle_movies_avengers"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                />

            <TextView
                android:id="@+id/tv_duration_movies_avengers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/duration_movies_avengers"
                android:textAppearance="@style/duration_movies" />


        </LinearLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_reviews_movie_avengers"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginBottom="8dp"
            app:layout_constraintBottom_toBottomOf="@id/iv_movie_avengers"
            app:layout_constraintStart_toStartOf="parent"
            >

            <ImageView
                android:id="@+id/iv_starIcon1_movie_avengers"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/star_icon_red"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"/>

            <ImageView
                android:id="@+id/iv_starIcon2_movie_avengers"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/star_icon_red"
                app:layout_constraintStart_toEndOf="@id/iv_starIcon1_movie_avengers"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="2dp"
                />

            <ImageView
                android:id="@+id/iv_starIcon3_movie_avengers"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/star_icon_red"
                app:layout_constraintStart_toEndOf="@id/iv_starIcon2_movie_avengers"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="2dp"
                />

            <ImageView
                android:id="@+id/iv_starIcon4_movie_avengers"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/star_icon_red"
                app:layout_constraintStart_toEndOf="@id/iv_starIcon3_movie_avengers"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="2dp"
                />

            <ImageView
                android:id="@+id/iv_starIcon5_movie_avengers"
                android:layout_width="8dp"
                android:layout_height="8dp"
                android:layout_marginTop="2dp"
                android:layout_marginBottom="2dp"
                android:src="@drawable/star_icon_gray"
                app:layout_constraintStart_toEndOf="@id/iv_starIcon4_movie_avengers"
                app:layout_constraintTop_toTopOf="parent"
                android:layout_marginStart="2dp"
                />

            <TextView
                android:id="@+id/tv_reviews_movie_avengers"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:text="@string/reviews"
                android:textAppearance="@style/reviews_movies"
                app:layout_constraintStart_toEndOf="@id/iv_starIcon5_movie_avengers"
                app:layout_constraintTop_toTopOf="parent"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>



    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>

